# ncnnMobileDetection

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: libuvccamera-release.aar
app/src/androidTest/java/com/example/ncnnmobiledetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5s.param
app/src/main/java/com/example/ncnnmobiledetection/: BitmapToUnity.java  CameraHelper.java  CameraHolder.java  FBO.java  GLTexture.java  GLTexture2D.java  GLTextureOES.java  MainActivityReceiver.java  (+6 more)
app/src/main/jni/: CMakeLists.txt  ncnnDetection.cpp
app/src/main/res/drawable/: button_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_usbcamera.xml  camera_unity.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
infiray_lt_m3_sdk/: build.gradle
infiray_lt_m3_sdk/src/main/: AndroidManifest.xml
infiray_lt_m3_sdk/src/main/res/values/: strings.xml
libusbcamera/: build.gradle
testUnsafe/: build.gradle
testUnsafe/src/main/: AndroidManifest.xml
testUnsafe/src/main/res/values/: strings.xml  themes.xml
testUnsafe/src/main/res/xml/: device_filter.xml
xslamLibrary/: build.gradle
xslamLibrary/src/main/: AndroidManifest.xml
xslamLibrary/src/main/res/layout/: activity_xslam.xml
xvsdk/: build.gradle
xvsdk/src/main/cpp/cmake/: Findlibusb-1.0.cmake
(+41 files in other folders)
